# barf_calc

./: .gitignore  .pre-commit-config.yaml  README.md  barf_calc.py  demo.cast  presets.yaml  pyproject.toml  requirements.txt  shell.nix  streamlit.py
barf_calc/: __init__.py  barf_calc.py
barf_calc/scripts/: bc.py
src/: .Meal.py.swp  .barf_calc.py.swp  Food.py  Meal.py  barf_calc.py
tests/: test_barf.py
